--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,49 @@
     <title>Markhor</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/pakistan_640.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&family=Poppins:wght@100;200;300;400;600;700&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <section class="header">
-    
-    <h1>Markhor</h1>
-    <h2>Markhor is the national animal of Pakistan</h2>
-    <p class="intro">The <a href="https://en.wikipedia.org/wiki/Markhor" class="markhor">Markhor</a> (Capra falconeri) /ˈmɑːrkɔːr/ is a large Capra species native to Central Asia, the Karakoram, and the Himalayas. It is listed on the IUCN Red List as
-         Near Threatened since 2015.[2]
 
-        The  is the national animal of Pakistan, where it is also known as the screw horn or "screw-horned goat",[3] mārkhor (مارخور) in Urdu from Classical Persian.[4]</p>
+        <h1>Markhor</h1>
+        <h2>Markhor is the national animal of Pakistan</h2>
+        <p class="intro">The <a href="https://en.wikipedia.org/wiki/Markhor" class="markhor">Markhor</a> (Capra
+            falconeri) /ˈmɑːrkɔːr/ is a large Capra species native to Central Asia, the Karakoram, and the Himalayas. It
+            is listed on the IUCN Red List as
+            Near Threatened since 2015.[2]
+
+            The is the national animal of Pakistan, where it is also known as the screw horn or "screw-horned goat",[3]
+            mārkhor (مارخور) in Urdu from Classical Persian.[4]</p>
         <h3>Behaviour and Ecology</h3>
-        <p>Markhor are adapted to mountainous terrain, and can be found between 600 and 3,600 m (2,000 and 11,800 ft) in elevation.
-             They typically inhabit scrub forests made up primarily of oaks (Quercus ilex), pines (Pinus gerardiana), and junipers (Juniperus
-              macropoda).[2] They are diurnal, and are mainly active in the early morning and late afternoon. Their diets shift seasonally: in 
-              the spring and summer periods they graze, but turn to browsing in winter, sometimes standing on their hind legs to reach high branches.
-               The mating season takes place in winter, during which the males fight each other by lunging, locking horns and attempting to push each other off balance. 
-               The gestation period lasts 135–170 days, and usually results in the birth of one or two kids, though rarely three. Markhor live in flocks, usually numbering nine animals, 
-               composed of adult females and their young. Adult males are largely solitary. Adult females and kids comprise most of the markhor population, with adult females making up 32% of the population and kids making up 31%. Adult males comprise 19%, while subadults (males aged 2–3 years) make
-                up 12%, and yearlings (females aged 12–24 months) make up 9% of the population.[9] Their alarm call closely resembles the bleating of domestic goats.[5] Early in the season the males
-                 and females may be found together on the open grassy patches and clear slopes among
-                 the forest. During the summer, the males remain in the forest,
-             while the females generally climb to the highest rocky ridges above</p>
-             <p class="credits">by M.Owais</p>
-            
-            </section>
+        <p class="second">Markhor are adapted to mountainous terrain, and can be found between 600 and 3,600 m (2,000 and 11,800 ft) in
+            elevation.
+            They typically inhabit scrub forests made up primarily of oaks (Quercus ilex), pines (Pinus gerardiana), and
+            junipers (Juniperus
+            macropoda).[2] They are diurnal, and are mainly active in the early morning and late afternoon. Their diets
+            shift seasonally: in
+            the spring and summer periods they graze, but turn to browsing in winter, sometimes standing on their hind
+            legs to reach high branches.
+            The mating season takes place in winter, during which the males fight each other by lunging, locking horns
+            and attempting to push each other off balance.
+            The gestation period lasts 135–170 days, and usually results in the birth of one or two kids, though rarely
+            three. Markhor live in flocks, usually numbering nine animals,
+            composed of adult females and their young. Adult males are largely solitary. Adult females and kids comprise
+            most of the markhor population, with adult females making up 32% of the population and kids making up 31%.
+            Adult males comprise 19%, while subadults (males aged 2–3 years) make
+            up 12%, and yearlings (females aged 12–24 months) make up 9% of the population.[9] Their alarm call closely
+            resembles the bleating of domestic goats.[5] Early in the season the males
+            and females may be found together on the open grassy patches and clear slopes among
+            the forest. During the summer, the males remain in the forest,
+            while the females generally climb to the highest rocky ridges above</p>
+        <p class="credits">by M.Owais</p>
+
+    </section>
 </body>
+
 </html>
